New flame shards.