@@ -8,4 +8,5 @@ public final class TODO {
     // TODO Chest MultiBlock Partices
     // TODO Super Mob Slying Pickaxe
     // TODO Hologram Mobs
+    //-Xmx2G -XX:PermSize=2G
 }
